--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "jeroennoten/laravel-adminlte": "^3.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "laravelcollective/html": "^6.0",
         "spatie/laravel-permission": "^3.5"
     },
     "require-dev": {
