--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=manonam500
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
