--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,9 @@
         }
     },
     "autoload": {
+        "files":[
+            "app/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
@@ -61,5 +64,6 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+        
     }
 }
